@@ -5451,10 +5451,12 @@
 	* configs/olimex-stm32-p107:  Incorporate ENCX24J600 support for the
 	  Olimex STM32 P107 board.  From Max Holtzberg (2013-8-25).
 	* fs/romfs/fs_romfsutil.c:  Fix an error where long (>15) file names
-	  were read incorrectly from a ROMFS file system.  From Mike Smit
+	  were read incorrectly from a ROMFS file system.  From Mike Smith
 	  (2013-8-25).
 	* arch/arm/src/stm32/stm32_sdio.c: SourceForge bug #17 Fix if
 	  CONFIG_SDIO_BLOCKSETUP defined, OS will crash". Generate an error
 	  if CONFIG_SDIO_BLOCKSETUP is defined; that option is not yet supported
 	  by the STM32 SDIO driver.  From CCTSAO (2013-6-26)
+	* drivers/net/encx24j600.c and .h: Use the ENC's SRAM for multiple TX
+	  packets.  From Max Holtzberg (2013-6-26).
 
